# KIdleTiming

src/plugins/osx/: CMakeLists.txt  macdispatcher.cpp  macdispatcher.h  macdispatcher_helper.mm  macpoller.cpp  macpoller.h  macpoller_helper.mm
